--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco005/cumco005.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco005/cumco005.component.html
@@ -1,29 +1,29 @@
 <div class="ui-fluid">
   <p-toast position="top-center"></p-toast>
-  <p-fieldset legend="Filtros">
+  <p-fieldset legend="{{ 'CUMCO005.titulo' | translate }}">
 
-    <p>Tipo Anexo Físico</p>
+    <p>{{ 'CUMCO005.FILTROS.filtroTipoAnexoFisico' | translate }}</p>
 
     <div class="ui-g">
       <div class="ui-g-12">
         <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
           <p-autoComplete [(ngModel)]="seleccionTipoAnexoFisicos" field="descripcion" [immutable]="false" [suggestions]="tipoAnexoFisicos" (completeMethod)="searchTipoanexo($event)" [dropdown]="true" [forceSelection]="true"
-            placeholder="Ingrese aquí el tipo de radicado a filtrar"></p-autoComplete>
+            placeholder="{{ 'CUMCO005.FILTROS.filtroAnexoFisicoPlaceHolder' | translate }}"></p-autoComplete>
 
           <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompleteTipo()"></p-button>
         </div>
       </div>
     </div>
 
-    <p>Anexo Físico</p>
+    <p>{{ 'CUMCO005.FILTROS.filtroAnexoFisico' | translate }}</p>
 
     <div class="ui-g">
       <div class="ui-g-12">
         <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
           <p-autoComplete [(ngModel)]="seleccionAnexoFisicos" field="descripcion" [immutable]="false" [suggestions]="anexosFisicos" (completeMethod)="searchAnexo($event)" [dropdown]="true" [forceSelection]="true"
-            placeholder="Ingrese aquí el organismo o dependencia a filtrar"></p-autoComplete>
+            placeholder="{{ 'CUMCO005.FILTROS.filtroAnexoFisicoPlaceHolder' | translate }}"></p-autoComplete>
           <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompleteAnexo()"></p-button>
         </div>
       </div>
@@ -33,7 +33,7 @@
 
   <br>
 
-  <p-fieldset legend="Configurar Anexos Físicos">
+  <p-fieldset legend="{{ 'CUMCO005.configurarAnexosFisicos' | translate }}">
 
     <!-- Start Table -->
     <!-- Start Table -->
@@ -44,9 +44,9 @@
         <div class="ui-helper-clearfix menu-sup-grid">
           <!-- Buttons -->
           <div class="button-sup-grid">
-            <p-button label="agregar" icon="pi pi-plus" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicAgregar()"></p-button>
-            <p-button label="eliminar" icon="pi pi-minus" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicEliminar()"></p-button>
-            <p-button label="guardar" icon="pi pi-save" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onGuardarColumna()"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicAgregar()"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicEliminar()"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.guardar' | translate }}" icon="pi pi-save" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onGuardarColumna()"></p-button>
           </div>
         </div>
       </ng-template>
