--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco008/cumco008.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco008/cumco008.component.html
@@ -1,25 +1,25 @@
 <div class="ui-fluid">
-  <p-fieldset legend="Filtros">
+  <p-fieldset legend="{{ 'CUMCO008.titulo' | translate }}">
 
-      <p>Canal</p>
+      <p>{{ 'CUMCO008.FILTROS.filtroCanal' | translate }}Canal</p>
 
       <div class="ui-g">
           <div class="ui-g-12">
               <div class="ui-inputgroup">
                   <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-                  <p-autoComplete [dropdown]="true" [required]="true" placeholder="Ingrese aquí el canal a filtrar"></p-autoComplete>
+                  <p-autoComplete [dropdown]="true" [required]="true" placeholder="{{ 'CUMCO008.FILTROS.filtroCanalPlaceHolder' | translate }}"></p-autoComplete>
                   <p-button icon="pi pi-times"></p-button>
               </div>
           </div>
       </div>
 
-      <p>Medio de Envío</p>
+      <p>{{ 'CUMCO008.FILTROS.filtroMedioEnvio' | translate }}</p>
 
       <div class="ui-g">
           <div class="ui-g-12">
               <div class="ui-inputgroup">
                   <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-                  <p-autoComplete [dropdown]="true" [required]="true" placeholder="Ingrese aquí el medio de envío a filtrar"></p-autoComplete>
+                  <p-autoComplete [dropdown]="true" [required]="true" placeholder="{{ 'CUMCO008.FILTROS.filtroMedioEnvioPlaceHolder' | translate }}"></p-autoComplete>
                   <p-button icon="pi pi-times"></p-button>
               </div>
           </div>
@@ -27,13 +27,13 @@
 
       <br>
 
-  </p-fieldset> 
+  </p-fieldset>
 
-  <p-fieldset legend="Configurar Canales">
+  <p-fieldset legend="{{ 'CUMCO008.configurarCanales' | translate }}">
 
           <!-- Start Table -->
-          <p-table [columns]="cols" [value]="rows" 
-          [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5,10,20]" 
+          <p-table [columns]="cols" [value]="rows"
+          [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5,10,20]"
           selectionMode="multiple" [(selection)]="selectedRows">
 
               <!-- Table Caption -->
@@ -41,17 +41,17 @@
                   <div class="ui-helper-clearfix menu-sup-grid">
                       <!-- Buttons -->
                       <div class="button-sup-grid">
-                          <p-button label="Agregar" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClicAgregar()"></p-button>
-                          <p-button label="Eliminar" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClicEliminar()"></p-button>
-                          <p-button label="Guardar" icon="pi pi-save" iconPos="left" style="float:left; margin-left: 2px;"></p-button>
+                          <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClicAgregar()"></p-button>
+                          <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="onClicEliminar()"></p-button>
+                          <p-button label="{{ 'BOTONESTABLA.guardar' | translate }}" icon="pi pi-save" iconPos="left" style="float:left; margin-left: 2px;"></p-button>
                       </div>
-                  </div>      
+                  </div>
               </ng-template>
 
               <!-- Table Heardes -->
               <ng-template pTemplate="header" let-columns>
                   <tr>
-                      <th *ngFor="let col of columns"> 
+                      <th *ngFor="let col of columns">
                           {{col.header}}
                       </th>
                   </tr>
@@ -66,7 +66,7 @@
                           <div *ngSwitchCase="0"> {{row[col.field]}} </div>
                           <div *ngSwitchDefault> {{row[col.field]}}  </div>
                         </div>
-                      
+
                       </td>
                   </tr>
               </ng-template>
@@ -77,11 +77,11 @@
     </p-fieldset>
 
 
-    <p-fieldset legend="Vincular Medios de Envío con Canales">
+    <p-fieldset legend="{{ 'CUMCO008.vincularCanales' | translate }}">
 
       <!-- Start Table -->
-      <p-table [columns]="cols2" [value]="rows2" 
-      [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5,10,20]" 
+      <p-table [columns]="cols2" [value]="rows2"
+      [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5,10,20]"
       selectionMode="multiple">
 
           <!-- Table Caption -->
@@ -89,17 +89,17 @@
               <div class="ui-helper-clearfix menu-sup-grid">
                   <!-- Buttons -->
                   <div class="button-sup-grid">
-                      <p-button label="Agregar" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;"></p-button>
-                      <p-button label="Eliminar" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;"></p-button>
-                      <p-button label="Guardar" icon="pi pi-save" iconPos="left" style="float:left; margin-left: 2px;"></p-button>
+                      <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;"></p-button>
+                      <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;"></p-button>
+                      <p-button label="{{ 'BOTONESTABLA.guardar' | translate }}" icon="pi pi-save" iconPos="left" style="float:left; margin-left: 2px;"></p-button>
                   </div>
-              </div>      
+              </div>
           </ng-template>
 
           <!-- Table Heardes -->
           <ng-template pTemplate="header" let-columns>
               <tr>
-                  <th *ngFor="let col of columns"> 
+                  <th *ngFor="let col of columns">
                       {{col.header}}
                   </th>
               </tr>
@@ -114,7 +114,7 @@
                       <div *ngSwitchCase="0"> {{row[col.field]}} </div>
                       <div *ngSwitchDefault> {{row[col.field]}}  </div>
                     </div>
-                  
+
                   </td>
               </tr>
           </ng-template>
@@ -124,5 +124,5 @@
 
 </p-fieldset>
 
-  
+
 </div>
