--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco010/cumco010.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco010/cumco010.component.html
@@ -1,14 +1,14 @@
 <div class="ui-fluid">
   <p-toast position="top-center"></p-toast>
-  <p-fieldset legend="{{ varText.default.CUMCO010.titulo }}">
+  <p-fieldset legend="{{ 'CUMCO010.titulo' | translate }}">
     <p>
-      {{ varText.default.CUMCO010.tituloDevolucion }}
+      {{ 'CUMCO010.FILTROS.filtroTituloDevolucion' | translate }}
     </p>
     <div class="ui-g">
       <div class="ui-g-12">
         <div class="ui-inputgroup">
           <p-autoComplete [(ngModel)]="seleccionFiltro" field="descripcion" [immutable]="false" [suggestions]="filtroDevolucion" (completeMethod)="searchDevolucion($event)"
-          [dropdown]="true" placeholder="{{ varText.default.CUMCO010.filtroDevolucion }}"
+          [dropdown]="true" placeholder="{{ 'CUMCO010.FILTROS.filtroTituloDevolucionPlaceHolder' | translate }}"
           [forceSelection]="true"></p-autoComplete>
           <p-button icon="pi pi-times" (click)="borrarFiltro()"></p-button>
         </div>
@@ -16,15 +16,15 @@
     </div>
   </p-fieldset>
 
-  <p-fieldset legend="{{ varText.default.CUMCO010.tituloTabla }}">
+  <p-fieldset legend="{{ 'CUMCO010.FILTROS.tituloTabla' | translate }}">
     <p-table [columns]="columnasAdjuntos" [value]="rows" [(selection)]="seleccionDevolucion" [paginator]="true" [rowsPerPageOptions]="[5,10,20]" [rows]="10" selectionMode="single" showCurrentPageReport="true"
       currentPageReportTemplate="Page {currentPage} of {totalPages}">
       <ng-template pTemplate="caption">
         <div class="ui-helper-clearfix menu-sup-grid">
           <div class="button-sup-grid">
-            <p-button label="{{ varText.default.BOTON.agregar }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="agregarClick()"></p-button>
-            <p-button label="{{ varText.default.BOTON.eliminar }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="eliminarClick()"></p-button>
-            <p-button icon="pi pi-save" label="{{ varText.default.BOTON.guardar }}" iconPos="left" style="float:left; margin-left: 2px;" (click)="onGuardarConfiguracion()"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" iconPos="left" style="float:left; margin-left: 2px;" (click)="agregarClick()"></p-button>
+            <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" iconPos="left" style="float:left; margin-left: 2px;" (click)="eliminarClick()"></p-button>
+            <p-button icon="pi pi-save" label="{{ 'BOTONESTABLA.guardar' | translate }}" iconPos="left" style="float:left; margin-left: 2px;" (click)="onGuardarConfiguracion()"></p-button>
           </div>
         </div>
       </ng-template>
@@ -54,7 +54,7 @@
                 </p-cellEditor>
               </div>
               <div *ngSwitchCase="2">
-                <p-checkbox name="groupname" [(ngModel)]="row.activo" binary="true" (onChange)="onChangeActivo(rowIndex)"></p-checkbox>  
+                <p-checkbox name="groupname" [(ngModel)]="row.activo" binary="true" (onChange)="onChangeActivo(rowIndex)"></p-checkbox>
               </div>
             </div>
 
@@ -71,7 +71,7 @@
 
 
 
-<!--  
+<!--
 </div>
 <div style="text-align:center">
   <button pButton type="button" label="Finalizar" class="btn btn-primary"></button>
