--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco012/cumco012.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco012/cumco012.component.html
@@ -1,23 +1,23 @@
 
 <div class="ui-fluid">
   <p-toast position="top-center"></p-toast>
-  <p-fieldset legend="{{ varText.default.CUMCO012.titulo }}">
+  <p-fieldset legend="{{ 'CUMCO012.titulo' | translate }}">
 
-      <p>{{ varText.default.CUMCO012.filtro }}</p>
+      <p>{{ 'CUMCO012.FILTROS.filtroOrganizmo' | translate }}</p>
 
       <div class="ui-g">
           <div class="ui-g-12">
               <div class="ui-inputgroup">
                   <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
                   <p-autoComplete [(ngModel)]="textAutoComlpeteOrganismoConfigurar" [suggestions]="suggestionsAutoCompleteOrganismoConfigurar" (completeMethod)="search($event)"
-                  (onSelect)="getTableInfo()"[dropdown]="true" [forceSelection]="true" [required]="true" placeholder="{{ varText.default.CUMCO012.filtroPlaceHolder }}"></p-autoComplete>
+                  (onSelect)="getTableInfo()"[dropdown]="true" [forceSelection]="true" [required]="true" placeholder="{{ 'CUMCO012.FILTROS.filtroOrganizmoPlaceHolder' | translate }}"></p-autoComplete>
                   <p-button icon="pi pi-times" (click) ="onClicBorrarAutoComplete()"></p-button>
               </div>
           </div>
       </div>
 
       <br>
-      <p class=boldParragraph>{{ varText.default.CUMCO012.tituloTabla }}</p>
+      <p class=boldParragraph>{{ 'CUMCO012.FILTROS.tituloTabla' | translate }}</p>
       <br>
 
           <!-- Start Table -->
@@ -30,9 +30,9 @@
                   <div class="ui-helper-clearfix menu-sup-grid">
                       <!-- Buttons -->
                       <div class="button-sup-grid">
-                          <p-button label="{{ varText.default.BOTON.agregar }}" icon="pi pi-plus" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicAgregar()"></p-button>
-                          <p-button label="{{ varText.default.BOTON.eliminar }}" icon="pi pi-minus" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicEliminar()"></p-button>
-                          <p-button label="{{ varText.default.BOTON.guardar }}" icon="pi pi-save" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onGuardarColumna()"></p-button>
+                          <p-button label="{{ 'BOTONESTABLA.agregar' | translate }}" icon="pi pi-plus" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicAgregar()"></p-button>
+                          <p-button label="{{ 'BOTONESTABLA.eliminar' | translate }}" icon="pi pi-minus" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onClicEliminar()"></p-button>
+                          <p-button label="{{ 'BOTONESTABLA.guardar' | translate }}" icon="pi pi-save" [disabled]="buttonDisabled" iconPos="left" style="float:left; margin-left: 2px;" (onClick)="onGuardarColumna()"></p-button>
                       </div>
                   </div>
               </ng-template>
